--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,7 @@ plugins {
 }
 
 android {
-    compileSdk 34
-
+    compileSdk 33
 
     buildFeatures {
         viewBinding true
@@ -52,6 +51,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-alpha03"
     implementation "androidx.fragment:fragment-ktx:1.4.1"
 
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
+
+
     def room_version = "2.4.2"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
@@ -61,7 +63,6 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:2.38.1"
 
     implementation "org.jetbrains.kotlinx:kotlinx-datetime:0.3.2"
-    //https://developer.android.com/studio/write/java8-support#library-desugaring
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
