--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="PlannerPal"
         android:name=".ui.JetPlannerApp"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
